# pebble

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/api/src/: client.rs  types.rs
crates/api/tests/: client_integration.rs
crates/commands/src/: lib.rs
crates/pebble/: Cargo.toml
crates/pebble/src/: app.rs  eval_runner.rs  grok_acp.rs  input.rs  interrupt.rs  main.rs  mcp.rs  model_catalog.rs  models.rs  provider_auth.rs  provider_diagnostics.rs  proxy.rs  render.rs  report.rs  runtime_client.rs  ui.rs
crates/pebble/src/app/: tests.rs
crates/runtime/src/: bash.rs  cancellation.rs  conversation.rs  file_ops.rs  hooks.rs  lib.rs  prompt.rs
crates/tools/src/: lib.rs
scripts/: pty_smoke.py  windows_smoke.ps1
